Fix alignment of word box layer with canvas
The word box layer's height was slightly mismatched from the canvas where the
document image is drawn. This resulted in the word boxes drifting out of
alignment with the image towards the bottom. Fix this by setting a
`border-sizing` property to eliminate the mismatch in widths between the canvas
and box layer, and setting `aspect-ratio` on the box layer div to match the one
implicitly generated for the canvas by the browser.

Fixes #33

--- a/examples/web/ocr-app.css
+++ b/examples/web/ocr-app.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: sans-serif;
 
@@ -28,7 +32,7 @@ p {
 
 .ProgressBar {
   border: var(--border);
-  height: 5px;
+  height: 8px;
 }
 
 .ProgressBar__bar {
@@ -66,7 +70,6 @@ p {
   left: 0;
   right: 0;
   top: 0;
-  bottom: 0;
 }
 
 .OCRDemoApp__text {
